Staff database and main page

--- a/TripTrove/Client/TripTrove.Client.csproj
+++ b/TripTrove/Client/TripTrove.Client.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <None Include="wwwroot\images\about.png" />
+    <None Include="wwwroot\images\AgentBanner.jpg" />
     <None Include="wwwroot\images\home.png" />
   </ItemGroup>
 
